--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<p>Bienvenid@s a la Tetería Té como Señora. Ofrecemos los mejores tés del mercado a bajos precios, gracias a nuestro sistema de venta online y cajas del mes.</p>
 		<p>Si deseas suscribirte a nuestra caja de té mensual, rellena tus datos en el formulario</p>
 		<form action="">
-			<label for="Nombre Dueño"> Nombre:</label>
+			<label for="Nombre"> Nombre:</label>
 			<input type="text">
-			<label for="Nombre mascota"> Apellido:</label>
+			<label for="Apellido"> Apellido:</label>
 			<input type="text">
 			<label for="Email"> Correo Electrónico:</label> 
 			<input type="email">
@@ -36,7 +36,7 @@
 		</form>
 	</section>
 	<section id="clientes">
-		<!-- Acá van los datos de ingresados por los clientes -->
+		<divid id="respuestas"></div>
 	</section>
 	<section id="productos">
 		<!-- Acá puedes crear lo que quieras-->
